--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,7 +1,7 @@
 Bookmarks:
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark.name %>: <%= bookmark.url %></li>
+    <li><%= bookmark %></li>
   <% end %>
 </ul>
 
