add method created in BookmarkCollection class

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,6 @@
 
 <a href="/bookmarks">View bookmarks</a>
+<form action="/add" method="post">
+    <input type="text" name="new_url" placeholder="Enter database url here">
+    <input type="submit" value="Add to database">
+  </form>
