added ability to enter a name for bookmarks

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,7 @@
 
 <a href="/bookmarks">View bookmarks</a>
 <form action="/add" method="post">
-    <input type="text" name="new_url" placeholder="Enter database url here">
+    <input type="text" name="new_name" placeholder="Enter bookmark name here">
+    <input type="text" name="new_url" placeholder="Enter bookmark url here">
     <input type="submit" value="Add to database">
   </form>
