--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,16 @@
-
 <a href="/bookmarks">View bookmarks</a>
 <form action="/add" method="post">
-    <input type="text" name="new_name" placeholder="Enter bookmark name here">
-    <input type="text" name="new_url" placeholder="Enter bookmark url here">
-    <input type="submit" value="Add to database">
-  </form>
+  <input type="text" name="new_name" placeholder="Enter bookmark name here">
+  <input type="text" name="new_url" placeholder="Enter bookmark url here">
+  <input type="submit" value="Add to database">
+</form>
+
+<h3>Bookmarks:</h3>
+
+<ul>
+  <% @bookmarks.each do |bookmark| %>
+    <li>
+      <a href=<%= bookmark.url %>><%= bookmark.name %></a>
+    </li>
+  <% end %>
+</ul>
