redirected update post query to a get query; functionality retained

--- a/views/update/index.erb
+++ b/views/update/index.erb
@@ -1,5 +1,5 @@
 <form action="/update_bookmark_complete" method="post">
-  <input type="hidden" name="bmk_id" value=<%= @bookmark_id %>>
+  <input type="hidden" name="bmk_id" value=<%= @bookmark %>>
   <input type="text" name="bmk_name" placeholder="Enter bookmark name here">
   <input type="text" name="bmk_url" placeholder="Enter bookmark url here">
   <input type="submit" value="Update">
