refactored bookmark_spec tests

--- a/views/update/index.erb
+++ b/views/update/index.erb
@@ -1,4 +1,4 @@
-<form action="/update_bookmark_complete" method="post">
+<form action="/update" method="post">
   <input type="hidden" name="bmk_id" value=<%= @bookmark %>>
   <input type="text" name="bmk_name" placeholder="Enter bookmark name here">
   <input type="text" name="bmk_url" placeholder="Enter bookmark url here">
